--- a/.gitmodules
+++ b/.gitmodules
@@ -4,6 +4,7 @@
 [submodule "third-party-library/EigenRand"]
 	path = third-party-library/EigenRand
 	url = https://github.com/bab2min/EigenRand.git
+	ignore = dirty
 [submodule "mnist-fashion"]
 	path = mnist-fashion
 	url = https://github.com/ArthurSonzogni/mnist-fashion.git
