Configure eigen in CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,10 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
 list(APPEND CMAKE_PREFIX_PATH third-party-library/eigen mnist-fashion)
-find_package(Eigen3 3.4 REQUIRED NO_MODULE)
+find_package(Eigen3 3.4 NO_MODULE)
+if(NOT Eigen3_FOUND)
+    include_directories(${CMAKE_SOURCE_DIR}/third-party-library/eigen/)
+endif()
 include_directories(third-party-library/EigenRand)
 
 find_package(MNIST)
@@ -21,4 +24,7 @@ add_executable(neural-network main.cpp
         Data.cpp
         Except.cpp
         MnistTest.cpp)
-target_link_libraries(neural-network Eigen3::Eigen)
+
+if(Eigen3_FOUND)
+    target_link_libraries(neural-network Eigen3::Eigen)
+endif()
