--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,26 +5,24 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
 list(APPEND CMAKE_PREFIX_PATH third-party-library/eigen mnist-fashion)
-find_package(Eigen3 3.4 NO_MODULE)
-if (NOT Eigen3_FOUND)
-    include_directories(${CMAKE_SOURCE_DIR}/third-party-library/eigen/)
-endif ()
+include_directories(${CMAKE_SOURCE_DIR}/third-party-library/eigen/)
 include_directories(third-party-library/EigenRand)
 
 find_package(MNIST)
 include_directories(${MNIST_INCLUDE_DIR})
 add_definitions(-DMNIST_DATA_DIR="${MNIST_DATA_DIR}" -DMNIST_FASHION_DATA_DIR="${MNIST_FASHION_DATA_DIR}")
 
-add_executable(neural-network main.cpp
-        ActivationFunction.cpp
-        LossFunction.cpp
-        Layer.cpp
-        Network.cpp
-        View.cpp
-        Data.cpp
-        Except.cpp
-        MnistTest.cpp)
+set(NEURAL_NETWORK ${CMAKE_SOURCE_DIR}/ActivationFunction.cpp
+        ${CMAKE_SOURCE_DIR}/LossFunction.cpp
+        ${CMAKE_SOURCE_DIR}/Layer.cpp
+        ${CMAKE_SOURCE_DIR}/Network.cpp
+        ${CMAKE_SOURCE_DIR}/View.cpp
+        ${CMAKE_SOURCE_DIR}/Data.cpp
+        ${CMAKE_SOURCE_DIR}/Except.cpp
+        ${CMAKE_SOURCE_DIR}/MnistTest.cpp)
 
-if (Eigen3_FOUND)
-    target_link_libraries(neural-network Eigen3::Eigen)
-endif ()
+add_library(net-lib ${NEURAL_NETWORK})
+add_executable(neural-network main.cpp)
+target_link_libraries(neural-network net-lib)
+
+add_subdirectory(tests)
