--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,7 @@ set(NEURAL_NETWORK ${CMAKE_SOURCE_DIR}/ActivationFunction.cpp
         ${CMAKE_SOURCE_DIR}/LossFunction.cpp
         ${CMAKE_SOURCE_DIR}/Layer.cpp
         ${CMAKE_SOURCE_DIR}/AdamWOptimizer.cpp
+        ${CMAKE_SOURCE_DIR}/MomentumOptimizer.cpp
         ${CMAKE_SOURCE_DIR}/Network.cpp
         ${CMAKE_SOURCE_DIR}/View.cpp
         ${CMAKE_SOURCE_DIR}/Data.cpp
