--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -4,7 +4,7 @@ enable_testing()
 add_subdirectory(googletest)
 include_directories(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR})
 
-add_executable(test-net TestActivationFunction.cpp)
+add_executable(test-net TestActivationFunction.cpp TestLossFunction.cpp TestLayer.cpp)
 target_link_libraries(test-net gtest gtest_main)
 target_link_libraries(test-net net-lib)
 
