Add StepDecay & Fix ExponentialDecay

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,7 @@ set(NEURAL_NETWORK ${CMAKE_SOURCE_DIR}/ActivationFunction.cpp
         ${CMAKE_SOURCE_DIR}/SchedulerUtils.cpp
         ${CMAKE_SOURCE_DIR}/ExponentialDecay.cpp
         ${CMAKE_SOURCE_DIR}/PolynomialDecay.cpp
+        ${CMAKE_SOURCE_DIR}/StepDecay.cpp
         ${CMAKE_SOURCE_DIR}/Network.cpp
         ${CMAKE_SOURCE_DIR}/View.cpp
         ${CMAKE_SOURCE_DIR}/Data.cpp
